--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="libs/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ngDialog-theme-mine.css">
+    <link rel="stylesheet" href="libs/nvd3/build/nv.d3.css">
+    <link rel="stylesheet" href="libs/angular-chart.js/dist/angular-chart.css">
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="js/custom/angular-cookies.js"></script>
@@ -48,7 +50,14 @@
     <script src="libs/d3/d3.js"></script>
     <script src="libs/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
     <script src="libs/angular-nvd3/dist/angular-nvd3.js"></script>
-    <link rel="stylesheet" href="libs/nvd3/build/nv.d3.css">
+
+
+    <!-- angular js charts!-->
+    <script src="libs/Chart.js/Chart.js"></script>
+      <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
+
+
+
 
 
     <!-- ANGULAR CUSTOM -->
