--- a/public/views/main/login.html
+++ b/public/views/main/login.html
@@ -1,7 +1,8 @@
 
+
 <div class="jumbotron text-center">
   <h1>1-Page</h1>
-  <p>Test tool</p>
+  <p>Project Performance Tracker</p>
 </div>
 <form class="form-horizontal" ng-submit="authenticate()" >
   <div class="form-group">
