--- a/public/views/main/projectPerProperty.html
+++ b/public/views/main/projectPerProperty.html
@@ -56,7 +56,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Chart </div>
         <div class="panel-body">
-            <nvd3 options="options" data="data"></nvd3>
+            <!--<nvd3 options="options" data="data"></nvd3>!-->
         </div>
       </div>
     </div>
