--- a/public/views/main/projectPerProperty.html
+++ b/public/views/main/projectPerProperty.html
@@ -79,12 +79,12 @@
                  datarows="masterDetails.data"
                  >
                </hot-table>
-               <hot-table ng-if="!isTemplate1"
+               <!--<hot-table ng-if="!isTemplate1"
                   hot-id="handson-template-table"
                   settings="settingsTemplate2"
                   datarows="masterDetails.data"
                   >
-                </hot-table>
+                </hot-table>!-->
 
                <button ng-click="saveData()" type="button" class="btn btn-primary">
                  <span ng-show="showSpinner" class="glyphicon glyphicon-refresh spinning"></span> Save Data</button>
