new theme for login

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -74,6 +74,14 @@
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 
+    <!-- Custom CSS -->
+    <link href="theme-landing/css/landing-page.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+
+    <script src="libs/jquery/dist/jquery.js"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.js"></script>
+
 </head>
 <body ng-app="trackerApp" ng-controller="AuthenticationController">
 
