--- a/public/views/main/home.html
+++ b/public/views/main/home.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
    <div class="row">
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
