--- a/public/views/main/login.html
+++ b/public/views/main/login.html
@@ -1,26 +1,58 @@
 
+<div class="intro-header">
+    <div class="container">
 
-<div class="jumbotron text-center">
-  <h1>1-Page</h1>
-  <p>Project Performance Tracker</p>
+            <div class="col-lg-12">
+                <div class="intro-message">
+                    <h1>1-Page</h1>
+                    <h3>Project Performance Tracker</h3>
+                    <hr class="intro-divider">
+                    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Sign in</button>
+                </div>
+            </div>
+
+
+    </div>
+    <!-- /.container -->
+
+    <!-- Modal -->
+      <div class="modal fade" style="color:black;" id="myModal" role="dialog">
+        <div class="modal-dialog modal-md">
+          <div class="modal-content">
+            <div class="modal-body">
+
+              <div class="panel panel-default">
+                <div class="panel-heading"></div>
+                <div class="panel-body">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <label for="inputEmail3" class="col-md-2">Email</label>
+                      <div class="col-md-6">
+                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="user.email">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputPassword3" class="col-md-2">Password</label>
+                      <div class="col-md-6">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" ng-model="user.password">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-md-6 text-left">
+                      <button data-dismiss="modal" ng-click="authenticate()" class="btn btn-default btn-md">Login</button>
+                      <button type="button" class="btn btn-default btn-md" data-dismiss="modal">Cancel</button>
+                    </div>
+                    </div>
+                  </form>
+                </div>
+                  </div>
+
+
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
 </div>
-<form class="form-horizontal" ng-submit="authenticate()" >
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-3">
-      <input type="email" class="form-control" id="inputEmail" placeholder="Email" ng-model="user.email">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-3">
-      <input type="password" class="form-control" id="inputPassword3" placeholder="Password" ng-model="user.password">
-    </div>
-  </div>
-
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button class="btn btn-primary active">Sign in</button>
-    </div>
-  </div>
-</form>
