Added bar chart

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -70,7 +70,8 @@
     <script src="js/controllers/InvitePropertyController.js"></script>
     <script src="js/services/PropertyService.js"></script>
     <script src="js/controllers/PropertyController.js"></script>
-
+    <script src="js/controllers/PortfolioController.js"></script>
+    
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 
