--- a/public/views/main/home.html
+++ b/public/views/main/home.html
@@ -16,7 +16,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a ui-sref=".project">PROJECT</a></li>
           <li><a ui-sref=".property">PROPERTY</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
+          <li><a ui-sref="home.portfolio">PORTFOLIO</a></li>
           <li><a href="#pricing">DASHBOARD</a></li>
           <li><a href="#" ng-click="logout()">LOGOUT</a></li>
         </ul>
