--- a/public/views/main/viewPDForAllLocs.html
+++ b/public/views/main/viewPDForAllLocs.html
@@ -33,9 +33,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">Performance by location</div>
     <div class="panel-body">
-      <canvas id="bar" class="chart chart-bar"
-chart-data="data" chart-labels="labels" chart-series="series">
-</canvas>
+      <nvd3 options="options" data="data"></nvd3>
     </div>
   </div>
 </div>
