Added page loader

--- a/public/views/main/home.html
+++ b/public/views/main/home.html
@@ -28,5 +28,7 @@
 </div>
 
 <div ui-view></div>
+<!--<div id="overlay"><img id="loading" src="http://bit.ly/pMtW1K"></div>!-->
+<div ng-if="showLoader" class="loading">Loading&#8230;</div>
 
 </div>
