--- a/public/views/main/projectPerProperty.html
+++ b/public/views/main/projectPerProperty.html
@@ -38,7 +38,7 @@
       <div class="panel panel-default" style="height:562px;">
         <div class="panel-heading">Project Details</div>
         <div class="panel-body">
-            <p>Location : {{locationDetails.name}}</p>
+            <p>Property : {{locationDetails.name}}</p>
             <p>Project Title : {{projectDetails.title}}</p>
             <p>Short Description : {{projectDetails.description}}</p>
             <p>Owner : {{projectDetails.owner}}</p>
