--- a/public/views/main/property.html
+++ b/public/views/main/property.html
@@ -8,7 +8,7 @@
 
   <div class="col-md-6">
     <div class="panel panel-primary">
-      <div class="panel-heading">Locations</div>
+      <div class="panel-heading">Properties</div>
       <div class="panel-body">
         <div class="list-group">
           <a ui-sref="home.viewproperty({id:model._id,name:model.name})" ng-repeat="model in locations" class="list-group-item">
