--- a/public/views/main/viewPDForAllLocs.html
+++ b/public/views/main/viewPDForAllLocs.html
@@ -31,7 +31,7 @@
 <div class="row">
   <div class="col-md-12">
   <div class="panel panel-default">
-    <div class="panel-heading">Performance by location</div>
+    <div class="panel-heading">Performance by property</div>
     <div class="panel-body">
       <nvd3 options="options" data="data"></nvd3>
     </div>
