--- a/public/views/main/project.html
+++ b/public/views/main/project.html
@@ -3,7 +3,7 @@
 <br/><br/>
     <a ui-sref="home.createProject" class="btn btn-primary active" role="button">
       <span class="glyphicon glyphicon-plus-sign"></span>
-      CreateNewProject</a>
+      Create Project</a>
 
 <br/><br/><br/>
 
