--- a/public/views/main/login.html
+++ b/public/views/main/login.html
@@ -7,7 +7,7 @@
                     <h1>1-Page</h1>
                     <h3>Project Performance Tracker</h3>
                     <hr class="intro-divider">
-                    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Sign in</button>
+                    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-log-in"></span> Sign in</button>
                 </div>
             </div>
 
