added locations to project page

--- a/public/views/main/projectPerProperty.html
+++ b/public/views/main/projectPerProperty.html
@@ -17,7 +17,7 @@
 
 
   <div class="btn-group" uib-dropdown>
-    <button id="split-button" type="button" class="btn btn-primary">Projects</button>
+    <button id="split-button" type="button" class="btn btn-primary">Projects in {{locationDetails.name}}</button>
     <button type="button" class="btn btn-primary" uib-dropdown-toggle>
       <span class="caret"></span>
       <span class="sr-only">Split button!</span>
@@ -34,7 +34,7 @@
 <p></p>
 
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="panel panel-default" style="height:562px;">
         <div class="panel-heading">Project Details</div>
         <div class="panel-body">
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading">Chart </div>
         <div class="panel-body">
