added cell color

--- a/public/views/main/createProject.html
+++ b/public/views/main/createProject.html
@@ -128,13 +128,7 @@
 
 
 
-               <hot-table
-
-                  hot-id="my-handsontable"
-                  settings="settingsnew"
-                  datarows="personalData"
-                  >
-                </hot-table>
+               <hot-table hot-id="my-handsontable" datarows="personalData"></hot-table>
 <!--
 
 
