updated template style

--- a/public/views/main/templates/projectTemplate.html
+++ b/public/views/main/templates/projectTemplate.html
@@ -1,2 +1,2 @@
-<hot-table hot-id="handsonTemplateBasic" settings="settingsTemplateBasic" datarows="dataTemplateBasic">
+<hot-table hot-id="handsonTemplateBasic" datarows="dataTemplateBasic">
  </hot-table>
